--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.1",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.18.1",
     "express-validator": "^7.0.1",
     "fs-extra": "^10.1.0",
